Implement comprehensive security with JWT, rate limiting, and RBAC
Co-authored-by: sanjayraj.raj08 <sanjayraj.raj08@gmail.com>